# archive-master-app

./: .env.dusk.local  .env.example  .env.manual.bak  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  E2E_CHROME_DEVTOOLS.md  ESTADO_PROYECTO_FINAL.md  EVALUACION_PROYECTO.md  IMPLEMENTATION_ROADMAP.md  MANUAL_CLIENTE_PASO_A_PASO_POR_ROL.md  MANUAL_USUARIO.md  MANUAL_USUARIO_CLIENTE_FLUJOS.md  MANUAL_USUARIO_SISTEMA.md  PD-AI-001.md  PLAN_DESARROLLO_FASES.md  PROYECTO_COMPLETADO.md  RBAC_MATRIX.md  README.md  SECURITY_POLICY.md  WARP.md  composer.json  docusaurus.json  nixpacks.toml  package-lock.json  package.json  phpunit.dusk.xml  phpunit.xml  requirements.md  tasks.md  vite.config.js
.cursor/: mcp.json
.cursor/rules/: laravel-boost.mdc
.docs/: ICONOGRAFIA_ARCHIVEMASTER.md
.github/workflows/: desktop-tauri.yml
app/Console/: Kernel.php
app/Enums/: ArchivePhase.php  DocumentAccessLevel.php  DocumentStatus.php  DocumentType.php  FinalDisposition.php  Priority.php  Role.php  SlaStatus.php
app/Events/: DocumentUpdated.php  DocumentVersionCreated.php
app/Exports/: CustomReportExport.php  DocumentsExport.php
app/Filament/: ResourceAccess.php
app/Models/: Branch.php  (+39 more)
bootstrap/: app.php  providers.php
config/: ai.php  api.php  database.php  documents.php  filament.php  l5-swagger.php  log-viewer.php  reverb.php
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
routes/: api.php  console.php  web.php
scripts/: deploy-bootstrap.sh  run-runtime-services.sh  runtime-tune.sh
tests/: DuskTestCase.php  TestCase.php
(+550 files in other folders)
